Add custom words dictionary for spelling, add clang tidy checks to vscode settings

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,4 +35,5 @@ repos:
         args: [
             --use-color,
             --warnings-as-errors=*, # Warnings don't make the check fail.
+            --extra-arg=-I.,
           ]
