--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
     "recommendations": [
         "ms-vscode.cpptools",
-        "streetsidesoftware.code-spell-checker",
+        "streetsidesoftware.code-spell-checker"
     ]
 }
